# test-cli

server/: pyproject.toml
server/project/: asgi.py  wsgi.py
web/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
web/projects/portal-channels/: README.md  ng-package.json  package.json
web/projects/portal-channels/app/src/: public-api.ts
web/projects/portal-channels/app/src/lib/: portal-channels.app.ts  portal-channels.component.spec.ts  portal-channels.component.ts  portal-channels.routes.ts  provider.ts
web/src/: enabled-apps.ts  index.html  main.ts
web/src/environments/: environment.ts
