[project]
name = "channels-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "huma_platform",
]

[tool.uv.sources]
huma_platform = { git = "https://github.com/huma-engineering/huma-platform.git", rev = "HPB-35832-make-huma-directory-reusable-in-multiple-projects" }

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "ruff>=0.12.4",
    "tblib>=3.1.0",
]
